modules/vm/main.tf
resource "azurerm_resource_group" "IN_RG" {
  name     = "${var.resource_group}-${var.enviroment}"
  location = var.location_resource
  tags = {
    "environment" = var.enviroment
  }
}

resource "azurerm_virtual_network" "IN_VNET" {
  name                = "${var.vnet_name}-${var.enviroment}"
  resource_group_name = azurerm_resource_group.IN_RG.name
  location            = var.location_resource
  address_space       = ["10.123.0.0/16"]
  tags = {
    "environment" = var.enviroment
  }
}

resource "azurerm_subnet" "IN_SUBNET" {
  name                 = "${var.subnet_name}-${var.enviroment}"
  resource_group_name  = azurerm_resource_group.IN_RG.name
  virtual_network_name = azurerm_virtual_network.IN_VNET.name
  address_prefixes     = ["10.123.1.0/24"]
}

resource "azurerm_network_security_group" "IN_SG" {
  name                = var.security_group_name
  location            = var.location_resource
  resource_group_name = azurerm_resource_group.IN_RG.name
  tags = {
    "environment" = var.enviroment
  }
  security_rule {
    name                       = "ssh-allow"
    priority                   = 101
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    source_address_prefix      = "*"
    destination_port_range     = "22"
    destination_address_prefix = "*"
  }
  security_rule {
    name                       = "http-allow"
    priority                   = 102
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    source_address_prefix      = "*"
    destination_port_range     = "80"
    destination_address_prefix = "*"
  }
  security_rule {
    name                       = "https-allow"
    priority                   = 103
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    source_address_prefix      = "*"
    destination_port_range     = "443"
    destination_address_prefix = "*"
  }
}

#Crear asociacion entre subnet y security_group
resource "azurerm_subnet_network_security_group_association" "IN_SGA" {
  subnet_id                 = azurerm_subnet.IN_SUBNET.id
  network_security_group_id = azurerm_network_security_group.IN_SG.id
}

resource "azurerm_public_ip" "IN-IP" {
  name                = "${var.ip_name}-${var.enviroment}"
  resource_group_name = azurerm_resource_group.IN_RG.name
  location            = var.location_resource
  allocation_method   = "Dynamic"
}

resource "azurerm_network_interface" "IN-NIC" {
  name                = var.nic_name
  location            = var.location_resource
  resource_group_name = azurerm_resource_group.IN_RG.name
  ip_configuration {
    name                          = "${var.ip_name}-Config-${var.enviroment}"
    subnet_id                     = azurerm_subnet.IN_SUBNET.id
    public_ip_address_id          = azurerm_public_ip.IN-IP.id
    private_ip_address_allocation = "Dynamic"
  }
  tags = {
    "environment" = var.enviroment
  }
}

resource "azurerm_linux_virtual_machine" "IN-VM" {
  name                  = "${var.lvm_name}-${var.enviroment}"
  resource_group_name   = azurerm_resource_group.IN_RG.name
  location              = var.location_resource
  size                  = "Standard_B2s"
  admin_username        = var.user
  network_interface_ids = [azurerm_network_interface.IN-NIC.id]
  custom_data           = filebase64("${path.module}/scripts/docker-install.tpl")
  source_image_reference {
    version   = "latest"
    sku       = "22_04-lts"
    publisher = "Canonical"
    offer     = "0001-com-ubuntu-server-jammy"
  }
  os_disk {
    caching              = "ReadWrite"
    storage_account_type = "Standard_LRS"
  }
  admin_ssh_key {
    username   = var.user
    public_key = file("~/.ssh/${var.ssh_key_path}.pub")
  }

  provisioner "file" {
    source      = "./containers/docker-compose.yml"
    destination = "/home/${var.user}/docker-compose.yml"
    connection {
      type        = "ssh"
      user        = var.user
      private_key = file("${var.ssh_key_path}")
      host        = self.public_ip_address
    }
  }

  provisioner "remote-exec" {
    inline = [
      "sudo su -c 'mkdir -p /home/${var.user}'",
      "sudo su -c 'mkdir -p /volumes/nginx/html'",
      "sudo su -c 'mkdir -p /volumes/nginx/certs'",
      "sudo su -c 'mkdir -p /volumes/nginx/vhostd'",
      "sudo su -c 'mkdir -p /volumes/mongo/data'",
      "sudo su -c 'chmod -R 770 /volumes/mongo/data'",
      "sudo su -c 'mkdir -p /volumes/nginx'",
      "sudo su -c 'touch /home/${var.user}/.env'",
      "sudo su -c 'echo \"MONGO_URL=${var.MONGO_URL}\" >> /home/${var.user}/.env'",
      "sudo su -c 'echo \"PORT=${var.PORT}\" >> /home/${var.user}/.env'",
      "sudo su -c 'echo \"MAIL_SECRET_KEY=${var.MAIL_SECRET_KEY}\" >> /home/${var.user}/.env'",
      "sudo su -c 'echo \"MAIL_SERVICE=${var.MAIL_SERVICE}\" >> /home/${var.user}/.env'",
      "sudo su -c 'echo \"MAIL_USER=${var.MAIL_USER}\" >> /home/${var.user}/.env'",
      "sudo su -c 'echo \"MAPBOX_ACCESS_TOKEN=${var.MAPBOX_ACCESS_TOKEN}\" >> /home/${var.user}/.env'",
      "sudo su -c 'echo \"MONGO_INITDB_ROOT_USERNAME=${var.MONGO_INITDB_ROOT_USERNAME}\" >> /home/${var.user}/.env'",
      "sudo su -c 'echo \"MONGO_INITDB_ROOT_PASSWORD=${var.MONGO_INITDB_ROOT_PASSWORD}\" >> /home/${var.user}/.env'",
      "sudo su -c 'echo \"DOMAIN=${var.DOMAIN}\" >> /home/${var.user}/.env'",
    ]

    connection {
      type        = "ssh"
      user        = var.user
      private_key = file(var.ssh_key_path)
      host        = self.public_ip_address
    }
  }
}

resource "time_sleep" "wait_02_minutes" {
  depends_on      = [azurerm_linux_virtual_machine.IN-VM]
  create_duration = "120s"
}

resource "null_resource" "init_docker" {
  depends_on = [time_sleep.wait_02_minutes]
  connection {
    type        = "ssh"
    user        = var.user
    private_key = file(var.ssh_key_path)
    host        = azurerm_linux_virtual_machine.IN-VM.public_ip_address
  }

  provisioner "remote-exec" {
    inline = ["sudo su -c 'docker-compose.yml up -d'"]
  }
}
